...
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        return exitButton
    }
    
    
    var createAlertModel: AlertModel {
        return AlertModel(title: "Пока, пока!", message: "Уверены, что хотите выйти?", firstButtonText: "Да", firstButtonCompletion: { [weak self] in
            guard let self = self else { return }
            OAuth2TokenStorage().delete()
            self.clean()
            let splash = SplashViewController()
            // Получаем экземпляр `Window` приложения
            guard let window = UIApplication.shared.windows.first else { fatalError("Invalid Configuration") }
...
